# AndroidFastDevelop

FloatBall/: build.gradle
FloatBall/src/main/: AndroidManifest.xml
HandleJpeg/: CMakeLists.txt  build.gradle
HandleJpeg/src/androidTest/java/com/jiangdg/handlejpeg/: ExampleInstrumentedTest.java
HandleJpeg/src/main/: AndroidManifest.xml
HandleJpeg/src/main/cpp/: NativeJPEG.cpp  jconfigint.h  jpeglib.h
HandleJpeg/src/main/java/com/jiangdg/handlejpeg/: CompressJpegActivity.java  MainActivity.java  TakePictureActivity.java
HandleJpeg/src/main/java/com/jiangdg/natives/: JPEGUtils.java
HandleJpeg/src/main/res/layout/: activity_main.xml
HandleJpeg/src/main/res/values/: strings.xml
HandleJpeg/src/test/java/com/jiangdg/handlejpeg/: ExampleUnitTest.java
HandleYUV/: CMakeLists.txt  build.gradle
HandleYUV/src/androidTest/java/com/jiangdg/natives/: ExampleInstrumentedTest.java
HandleYUV/src/main/: AndroidManifest.xml
HandleYUV/src/main/cpp/: native_yuv.cpp
HandleYUV/src/main/java/com/jiangdg/demo/: CameraManager.java  H264DecodeThread.java  H264EncodeThread.java  MainActivity.java
HandleYUV/src/main/java/com/jiangdg/natives/: YuvUtils.java
HandleYUV/src/main/res/layout/: activity_main.xml
HandleYUV/src/test/java/com/jiangdg/natives/: ExampleUnitTest.java
HotFix/: build.gradle
HotFix/src/main/: AndroidManifest.xml
LameMp3/: CMakeLists.txt  build.gradle
LameMp3/src/main/: AndroidManifest.xml
LameMp3/src/main/cpp/: LameMp3.c  LameMp3.h
LameMp3/src/main/java/com/jiangdg/natives/: LameMp3.java  MainActivity.java
LameMp3/src/main/res/layout/: activity_main.xml
LameMp3/src/main/res/values/: strings.xml
LeaksExamples/: build.gradle
LeaksExamples/src/main/: AndroidManifest.xml
RC4Encrypt/: CMakeLists.txt  build.gradle
RC4Encrypt/src/androidTest/java/com/jiangdg/test/: ExampleInstrumentedTest.java
RC4Encrypt/src/main/: AndroidManifest.xml
RC4Encrypt/src/main/cpp/: NativeRC4.cpp
RC4Encrypt/src/main/java/com/jiangdg/natives/: RC4Utils.java
RC4Encrypt/src/main/java/com/jiangdg/test/: CameraManager.java  FileUtils.java  H264DecodeThread.java  H264EncodeThread.java  MainActivity.java
RC4Encrypt/src/main/res/layout/: activity_main.xml
RC4Encrypt/src/main/res/values/: strings.xml
RC4Encrypt/src/test/java/com/jiangdg/test/: ExampleUnitTest.java
SimpleThreadPool/: build.gradle
SimpleThreadPool/src/main/: AndroidManifest.xml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
libjpeg/: CMakeLists.txt  build.gradle
libjpeg/so/arm64-v8a/: jconfigint.h
(+89 files in other folders)
